fix: fix container issues

--- a/src/style.scss
+++ b/src/style.scss
@@ -3,55 +3,7 @@ $primary: #d24115;
 $black: #000000;
 
 // Import Bootstrap CSS
-@import "../node_modules/bootstrap/scss/mixins/banner";
-@include bsBanner("");
-
-// scss-docs-start import-stack
-// Configuration
-@import "../node_modules/bootstrap/scss/functions";
-@import "../node_modules/bootstrap/scss/variables";
-@import "../node_modules/bootstrap/scss/mixins";
-
-// Layout & components
-:root {
-	// Note: Use `inspect` for lists so that quoted items keep the quotes.
-	// See https://github.com/sass/sass/issues/2383#issuecomment-336349172
-	--#{$prefix}font-sans-serif: #{inspect($font-family-sans-serif)};
-	--#{$prefix}font-monospace: #{inspect($font-family-monospace)};
-
-	// Root and body
-	@if $font-size-root != null {
-		--#{$prefix}root-font-size: #{$font-size-root};
-	}
-	--#{$prefix}body-font-family: #{inspect($font-family-base)};
-	@include rfs($font-size-base, --#{$prefix}body-font-size);
-	--#{$prefix}body-font-weight: #{$font-weight-base};
-	--#{$prefix}body-line-height: #{$line-height-base};
-	@if $body-text-align != null {
-		--#{$prefix}body-text-align: #{$body-text-align};
-	}
-
-	--#{$prefix}body-color: #{$body-color};
-	--#{$prefix}body-color-rgb: #{to-rgb($body-color)};
-	--#{$prefix}body-bg: #{$body-bg};
-	--#{$prefix}body-bg-rgb: #{to-rgb($body-bg)};
-
-	--#{$prefix}heading-color: #{$headings-color};
-
-	--#{$prefix}link-color: #{$link-color};
-	--#{$prefix}link-color-rgb: #{to-rgb($link-color)};
-	--#{$prefix}link-decoration: #{$link-decoration};
-
-	--#{$prefix}link-hover-color: #{$link-hover-color};
-	--#{$prefix}link-hover-color-rgb: #{to-rgb($link-hover-color)};
-
-	@if $link-hover-decoration != null {
-		--#{$prefix}link-hover-decoration: #{$link-hover-decoration};
-	}
-}
-
-@import "../node_modules/bootstrap/scss/reboot";
-@import "../node_modules/bootstrap/scss/type";
+@import "../node_modules/bootstrap/scss/bootstrap.scss";
 
 // Global Styles
 body {
@@ -78,7 +30,7 @@ h4 {
 
 // Main Section Styles
 .main {
-	padding: 1rem;
+	padding: 1em 0;
 }
 
 hr {
