refactor: replace google font with local fonts

--- a/src/style.scss
+++ b/src/style.scss
@@ -17,6 +17,9 @@ $h6-font-size: $heading-size-base !default;
 // Import Bootstrap CSS
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 
+// Import font faces
+@import "fonts";
+
 // Global Styles
 body {
 	font-family: "Arya", sans-serif; // Secondary font
