--- a/src/_fonts.scss
+++ b/src/_fonts.scss
@@ -1,165 +1,195 @@
 /* devanagari */
 @font-face {
-	font-family: "Arya";
+	font-family: "Eczar";
 	font-style: normal;
 	font-weight: 400;
 	font-display: swap;
-	src: url("../public/fonts/arya-0.woff2") format("woff2");
+	src: url("../public/fonts/eczar-0.woff2") format("woff2");
 	unicode-range: U+0900-097F, U+1CD0-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC,
 		U+A830-A839, U+A8E0-A8FF;
 }
-/* latin-ext */
+/* greek-ext */
 @font-face {
-	font-family: "Arya";
+	font-family: "Eczar";
 	font-style: normal;
 	font-weight: 400;
 	font-display: swap;
-	src: url("../public/fonts/arya-1.woff2") format("woff2");
+	src: url("../public/fonts/eczar-1.woff2") format("woff2");
+	unicode-range: U+1F00-1FFF;
+}
+/* greek */
+@font-face {
+	font-family: "Eczar";
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url("../public/fonts/eczar-2.woff2") format("woff2");
+	unicode-range: U+0370-03FF;
+}
+/* latin-ext */
+@font-face {
+	font-family: "Eczar";
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url("../public/fonts/eczar-3.woff2") format("woff2");
 	unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF,
 		U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
 @font-face {
-	font-family: "Arya";
+	font-family: "Eczar";
 	font-style: normal;
 	font-weight: 400;
 	font-display: swap;
-	src: url("../public/fonts/arya-2.woff2") format("woff2");
+	src: url("../public/fonts/eczar-4.woff2") format("woff2");
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
 		U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122,
 		U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* devanagari */
 @font-face {
-	font-family: "Arya";
+	font-family: "Eczar";
 	font-style: normal;
-	font-weight: 700;
+	font-weight: 500;
 	font-display: swap;
-	src: url("../public/fonts/arya-3.woff2") format("woff2");
+	src: url("../public/fonts/eczar-0.woff2") format("woff2");
 	unicode-range: U+0900-097F, U+1CD0-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC,
 		U+A830-A839, U+A8E0-A8FF;
 }
+/* greek-ext */
+@font-face {
+	font-family: "Eczar";
+	font-style: normal;
+	font-weight: 500;
+	font-display: swap;
+	src: url("../public/fonts/eczar-1.woff2") format("woff2");
+	unicode-range: U+1F00-1FFF;
+}
+/* greek */
+@font-face {
+	font-family: "Eczar";
+	font-style: normal;
+	font-weight: 500;
+	font-display: swap;
+	src: url("../public/fonts/eczar-2.woff2") format("woff2");
+	unicode-range: U+0370-03FF;
+}
 /* latin-ext */
 @font-face {
-	font-family: "Arya";
+	font-family: "Eczar";
 	font-style: normal;
-	font-weight: 700;
+	font-weight: 500;
 	font-display: swap;
-	src: url("../public/fonts/arya-4.woff2") format("woff2");
+	src: url("../public/fonts/eczar-3.woff2") format("woff2");
 	unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF,
 		U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
 @font-face {
-	font-family: "Arya";
+	font-family: "Eczar";
 	font-style: normal;
-	font-weight: 700;
+	font-weight: 500;
 	font-display: swap;
-	src: url("../public/fonts/arya-5.woff2") format("woff2");
+	src: url("../public/fonts/eczar-4.woff2") format("woff2");
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
 		U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122,
 		U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* devanagari */
 @font-face {
-	font-family: "Gotu";
+	font-family: "Eczar";
 	font-style: normal;
-	font-weight: 400;
+	font-weight: 600;
 	font-display: swap;
-	src: url("../public/fonts/gotu-6.woff2") format("woff2");
+	src: url("../public/fonts/eczar-0.woff2") format("woff2");
 	unicode-range: U+0900-097F, U+1CD0-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC,
 		U+A830-A839, U+A8E0-A8FF;
 }
-/* vietnamese */
+/* greek-ext */
 @font-face {
-	font-family: "Gotu";
+	font-family: "Eczar";
 	font-style: normal;
-	font-weight: 400;
+	font-weight: 600;
 	font-display: swap;
-	src: url("../public/fonts/gotu-7.woff2") format("woff2");
-	unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169,
-		U+01A0-01A1, U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323,
-		U+0329, U+1EA0-1EF9, U+20AB;
+	src: url("../public/fonts/eczar-1.woff2") format("woff2");
+	unicode-range: U+1F00-1FFF;
+}
+/* greek */
+@font-face {
+	font-family: "Eczar";
+	font-style: normal;
+	font-weight: 600;
+	font-display: swap;
+	src: url("../public/fonts/eczar-2.woff2") format("woff2");
+	unicode-range: U+0370-03FF;
 }
 /* latin-ext */
 @font-face {
-	font-family: "Gotu";
+	font-family: "Eczar";
 	font-style: normal;
-	font-weight: 400;
+	font-weight: 600;
 	font-display: swap;
-	src: url("../public/fonts/gotu-8.woff2") format("woff2");
+	src: url("../public/fonts/eczar-3.woff2") format("woff2");
 	unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF,
 		U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
 @font-face {
-	font-family: "Gotu";
+	font-family: "Eczar";
 	font-style: normal;
-	font-weight: 400;
+	font-weight: 600;
 	font-display: swap;
-	src: url("../public/fonts/gotu-9.woff2") format("woff2");
+	src: url("../public/fonts/eczar-4.woff2") format("woff2");
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
 		U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122,
 		U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* devanagari */
 @font-face {
-	font-family: "Tillana";
+	font-family: "Eczar";
 	font-style: normal;
-	font-weight: 400;
+	font-weight: 700;
 	font-display: swap;
-	src: url("../public/fonts/tillana-10.woff2") format("woff2");
+	src: url("../public/fonts/eczar-0.woff2") format("woff2");
 	unicode-range: U+0900-097F, U+1CD0-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC,
 		U+A830-A839, U+A8E0-A8FF;
 }
+/* greek-ext */
+@font-face {
+	font-family: "Eczar";
+	font-style: normal;
+	font-weight: 700;
+	font-display: swap;
+	src: url("../public/fonts/eczar-1.woff2") format("woff2");
+	unicode-range: U+1F00-1FFF;
+}
+/* greek */
+@font-face {
+	font-family: "Eczar";
+	font-style: normal;
+	font-weight: 700;
+	font-display: swap;
+	src: url("../public/fonts/eczar-2.woff2") format("woff2");
+	unicode-range: U+0370-03FF;
+}
 /* latin-ext */
 @font-face {
-	font-family: "Tillana";
+	font-family: "Eczar";
 	font-style: normal;
-	font-weight: 400;
+	font-weight: 700;
 	font-display: swap;
-	src: url("../public/fonts/tillana-11.woff2") format("woff2");
+	src: url("../public/fonts/eczar-3.woff2") format("woff2");
 	unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF,
 		U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
 @font-face {
-	font-family: "Tillana";
-	font-style: normal;
-	font-weight: 400;
-	font-display: swap;
-	src: url("../public/fonts/tillana-12.woff2") format("woff2");
-	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-		U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122,
-		U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-/* devanagari */
-@font-face {
-	font-family: "Tillana";
+	font-family: "Eczar";
 	font-style: normal;
 	font-weight: 700;
 	font-display: swap;
-	src: url("../public/fonts/tillana-13.woff2") format("woff2");
-	unicode-range: U+0900-097F, U+1CD0-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC,
-		U+A830-A839, U+A8E0-A8FF;
-}
-/* latin-ext */
-@font-face {
-	font-family: "Tillana";
-	font-style: normal;
-	font-weight: 700;
-	font-display: swap;
-	src: url("../public/fonts/tillana-14.woff2") format("woff2");
-	unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF,
-		U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* latin */
-@font-face {
-	font-family: "Tillana";
-	font-style: normal;
-	font-weight: 700;
-	font-display: swap;
-	src: url("../public/fonts/tillana-15.woff2") format("woff2");
+	src: url("../public/fonts/eczar-4.woff2") format("woff2");
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
 		U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122,
 		U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
